fix: overflow .about .composition__block

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9456,7 +9456,6 @@ body.color {
 }
 
 .about .composition__block {
-  overflow: hidden;
   background-color: #fff;
 }
 
