--- a/front/#src/scss/components/about.scss
+++ b/front/#src/scss/components/about.scss
@@ -9,7 +9,7 @@
     padding-bottom: 100px;
   }
   .composition__block {
-    overflow: hidden;
+    // overflow: hidden;
     background-color: #fff;
   }
   .composition__item:last-of-type {
@@ -40,7 +40,7 @@
       left: 50%;
       transform: translate(-50%);
       p {
-        font-family: "Circe";
+        font-family: 'Circe';
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
@@ -71,7 +71,7 @@
     p {
       max-width: 452px;
       text-align: center;
-      font-family: "Circe";
+      font-family: 'Circe';
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
